--- a/css/prim.css
+++ b/css/prim.css
@@ -7,7 +7,7 @@ body {
 }
 
 nav {
-	text-align: center;
+	text-align: initial;
 }
 
 nav ul {
@@ -18,7 +18,6 @@ nav ul {
 nav ul li {
 		color: white;
 		display: inline-block;
-		margin: 4px 8.5px 0 0;
 		position: relative;
 		padding: 0px 6px 2px 6px;
 }
